--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
     <section class="bg-secondary ">
         <div class="px-2">
             <div class="flex flex-col sm:flex-row  sm:justify-between sm:items-center">
-                <div class="w-full sm:pl-8 sm:pt-10 h-[475px] bg-red-400 flex flex-col 
+                <div class="w-full sm:pl-8 sm:pt-10 h-[475px]  flex flex-col 
                 gap-10 sm:w-[60%] bg-no-repeat bg-right-bottom custom-bg"
                
                 >
@@ -938,7 +938,6 @@
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4vbeiurx5i8VjYzn-muTWLtKu23IfljQ&callback=initMap" async defer></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4vbeiurx5i8VjYzn-muTWLtKu23IfljQ&libraries=places" async defer></script>
     <script src="./index.js"></script>
 
 </body>
