--- a/src/index.html
+++ b/src/index.html
@@ -800,8 +800,8 @@
 <hr>
 
     <!-- state -->
-    <section class=" p-4">
-        <div class="flex flex-wrap justify-around">
+    <section class=" p-4   flex justify-center items-center">
+        <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 w-[95%] ">
             <div class="flex flex-col">
                 <span class="text-lg font-bold">75000+</span>
                 <span class="text-sm font-semibold">Deals</span>
@@ -815,15 +815,9 @@
                 <span class="text-sm font-semibold">Active Users</span>
             </div>
             <div class="flex flex-col">
-
                 <span class="text-lg font-bold">2 Millions</span>
                 <span class="text-sm font-semibold">Downloads</span>
-
             </div>
-        </div>
-
-
-
         </div>
     </section>
     <section class="bg-yellow-100 flex items-center justify-center">
