--- a/src/index.html
+++ b/src/index.html
@@ -879,7 +879,7 @@
             </div>
         </div>
         <hr class="w-full">
-        <div class="flex justify-between px-10 py-2">
+        <div class="flex flex-col sm:flex-row sm:justify-between justify-start sm:items-center gap-2 sm:gap-0 px-10 py-2">
             <p class="text-xs font-light">&copy; All rights reserved by Deely</p>
             <div class="flex gap-2">
                 <span><img src="./public/facebook.svg" alt=""></span>
