--- a/src/index.html
+++ b/src/index.html
@@ -774,7 +774,7 @@
 
 
     <!-- App Download Section -->
-    <section class="bg-white py-16">
+    <section class="bg-white py-16 px-3">
         <div class="container mx-auto px-4 bg-secondary rounded-lg ">
             <div class="flex flex-col sm:flex-row items-center gap-10 py-4 px-4 ">
                 <div class="w-full sm:w-1/2 flex h-[80%] items-center justify-center">
