--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 
     <!-- Header -->
     <header class="bg-white shadow-sm ">
-        <div class="container mx-auto px-4">
+        <div class="container mx-auto md:px-4">
             <div class="flex items-center justify-between h-16">
 
                 <div class="flex items-center">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
 
-                <div class="flex items-center space-x-4">
+                <div class="flex items-center md:space-x-4">
                     <div class="hidden md:block relative">
                         <input type="search" placeholder="Search..." class="w-64 px-4 py-2 rounded-lg bg-gray-100">
                         <button class="absolute right-2 top-2 text-gray-500">
