--- a/src/index.html
+++ b/src/index.html
@@ -280,7 +280,7 @@
                 </div>
                 <button class="bg-primary text-white px-4 py-2 rounded-full hidden md:block">View on Map</button>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-6">
 
 
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden h-fit relative">
@@ -520,7 +520,7 @@
                  px-6 py-2 rounded-full hover:bg-green-700">Explore</button>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-6">
 
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                     <div class="relative">
